# python-cli-app

./: README.md  pyproject.toml
src/pythoncliapp/: logging.py  settings.py
src/pythoncliapp/cli/: main.py
tests/: __init__.py
tests/cli/: test_main.py
tests/resources/: logging.yaml
